Agent Page UI & Integration + Minor Bug fixes

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -20,6 +20,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.hide-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scroll {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 .link-btn {
   @apply block w-full bg-gray-100 text-black py-2.5 rounded-xl text-sm hover:bg-gray-300 transition-[colors,transform] text-center active:scale-95;
 }
